# pico-rtos

./: .gitmodules  CMakeLists.txt  flash.sh  open_terminal.sh  run.sh
icm20948/: CMakeLists.txt  icm20948.c  icm20948.h
src/: CMakeLists.txt  main.c
